--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.datasource.initial-size = @spring.datasource.initial-size@
 ####################################
 # mybatis≈‰÷√
 ####################################
-mybatis.mapperLocatios = classpath*:/mapper/*.xml
-mybatis.typeAliasesPackage =com.dantes.StudentDormitoryManagement.model
+mybatis.mapper-locations = classpath*:/mapper/*.xml
+mybatis.type-aliases-package = com.dantes.StudentDormitoryManagement.model
 
 ####################################
 # ª∑æ≥—°‘Ò
