--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port = 8888
 
 # 数据库连接信息
-spring.datasource.url = jdbc:mysql://localhost:3306/student_droms?useUnicode=true&characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://localhost:3306/student_droms?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.max-idel = 10
